fixed aspect ratio bug on small devices /geschichte/zeitung/

--- a/geschichte/zeitung/style.css
+++ b/geschichte/zeitung/style.css
@@ -39,5 +39,6 @@ section img {
 @media only screen and (max-width: 1030px) {
     section img {
         max-width: 10rem;
+        height: auto;
     }
 }
